create github pages

--- a/page3.html
+++ b/page3.html
@@ -86,7 +86,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/y">free html site templates</a></section><section class="menu cid-qRFLWnFFZd" once="menu" id="menu2-q">
+<section class="engine"><a href="https://mobiri.se/a">online site builder</a></section><section class="menu cid-qRFLWnFFZd" once="menu" id="menu2-q">
 
     
 
