--- a/page2.html
+++ b/page2.html
@@ -40,7 +40,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/s">bootstrap themes</a></section><section class="cid-qPpIsr2ZK8" id="video3-a">
+<section class="engine"><a href="https://mobiri.se/r">bootstrap templates</a></section><section class="cid-qPpIsr2ZK8" id="video3-a">
 
     
     
